# OrangeOS

./: .bochsrc  .gdbinit  .gitignore  CMakeLists.txt  Makefile  emptyfat12.img  iso  mingw32.cmake  template.c.txt  template.h.txt
Clementine/: CMakeLists.txt
Clementine/arch/i686/Stage2/: Stage2.asm
Clementine/arch/i686/inc/: A20.inc  Fat12.inc  Floppy16.inc  Gdt.inc  stdio.inc
Clementine/arch/x86/: CMakeLists.txt
Clementine/arch/x86/Stage1/: Stage1.asm
Clementine/arch/x86/Stage2/: Stage2.asm
Clementine/arch/x86/inc/: Fat12.inc  Floppy16.inc  Gdt.inc  stdio.inc
LibOC/: CMakeLists.txt  module.mk
LibOC/common/: CMakeLists.txt  assert.c  ctype.c  string.c
LibOC/include/: assert.h  ctype.h  stddef.h  string.h
Orange/: CMakeLists.txt  module.mk
Orange/arch/i686/: boot.S
Orange/arch/x86/: CMakeLists.txt  boot.asm  linker.ld
Orange/common/: CMakeLists.txt  kernel_main.c
scripts/: build  clean  config  default-host  dist-tag  folders  iso  qemu  shapelogs  target-triplet-to-arch  up-release
